@@ -2,4 +2,17 @@
 
 The branch with final project is SPOR-73NOU2.
 
+Sport Center Application
 
+Members:Mergea Sergiu - Octavian , Neagoe Dan - Petre
+Instruction to run the application: switch to folder /target and run the command in cmd: 
+
+java -jar --module-path "D:\An2_Sem2\Java_FX\javafx-sdk-18\lib" --add-modules javafx.controls,javafx.fxml SportApp-fis.jar
+
+Some results of our work:
+
+![image](https://user-images.githubusercontent.com/93083921/170387897-f7db3009-01dc-430d-a795-d38ce329f728.png)
+
+![image](https://user-images.githubusercontent.com/93083921/170387936-af2b8c71-b2d9-4f6f-9214-2d371431f663.png)
+
+![image](https://user-images.githubusercontent.com/93083921/170387971-ac98e526-1eab-48d4-9b08-a17cd2bb7462.png)
